--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -110,64 +110,60 @@
 		@include clearfix;
 		float: right;
 		@include box-shadow(0px 0px 6px #ddd);
-		figure{
-			height: $thumblinks-dim;
-			width: $thumblinks-dim;
-			margin: 0px;
-			img{
-				width: 100%;
-			}
+	}
+	figure{
+		height: $thumblinks-dim;
+		width: $thumblinks-dim;
+		margin: 0px;
+		img{
+			width: 100%;
 		}
 	}
 	li.opened, li:hover{
-		@include box-shadow(0px 0px 6px #333);
+		@include box-shadow(0px 0px 6px rgba(0,0,0,.5));
 	}
 }
 .story{
 	width: $feature-content-height*2;
 	position: absolute;
-	top: 0px;
 	display: none;
-	.story-image{
-		width: $feature-content-height;
-		height: $feature-content-height + $hero-padding*2;
-		overflow: hidden;
-		@include clearfix;
-		float: left;
-		background-color: #000;
-		img{
-			width: 100%;
-		}
+	&.opened{
+		display: block;
 	}
 }
-section.story-blurb{
+.story-image{
+	width: $feature-content-height;
+	height: $feature-content-height + $hero-padding*2;
+	overflow: hidden;
+	@include clearfix;
+	float: left;
+	background-color: #000;
+	img{
+		width: 100%;
+	}
+}
+.story-blurb{
 	width: $feature-content-height - $story-padding*2;
 	height: $feature-content-height;
 	padding: $story-padding;
 	position: relative;
-	left: 4px;
 	@include clearfix;
+	left: 4px;
 	float: right;
-	header.story-blurb{
-		font-family: $serif;
-		font-size: 26px;
-	}
-	.blurb{
-		margin-top: 24px;
-		p{
-			font-family: $sans;
-			font-size: 14px;
-			line-height: 18px;
-		}
-	}
-	.story-read-more{
-		float: right;
-	}
 }
-.story.opened{
-	display: block;
+.story-blurb-header{
+	font-family: $serif;
+	font-size: 26px;
+	margin-bottom: $story-padding;
 }
-
+.blurb{
+	font-family: $sans;
+	font-size: 14px;
+	line-height: 18px;
+}
+.story-read-more{
+	float: right;
+}
 
 /*
 * hero button, e.g. story-read-more
