--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -26,7 +26,7 @@ $nav-dim: 60px
 $nav-arrow-margin: 12px
 
 //colors
-$pale-red: #E01726
+$pale-red: #F48DA3
 $highlight-red: #DA0000
 $light-red: #C60017
 $mid-red: #AC1831
