--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -51,45 +51,40 @@
 /* line 45, ../sass/style.scss */
 #features li {
   width: 244px;
-  display: block;
   float: left;
   text-align: center;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
   color: #e6e3d7;
   font-family: "Helvetica", "Arial", sans-serif;
+  list-style: none;
 }
-/* line 58, ../sass/style.scss */
-#features li:hover {
+/* line 54, ../sass/style.scss */
+#features li:hover, #features li.opened {
   color: #fffdf7;
+}
+/* line 57, ../sass/style.scss */
+#features li.opened {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(10%, #83000c), color-stop(80%, #c60017), color-stop(100%, #da0000));
+  background-image: -webkit-linear-gradient(#83000c 10%, #c60017 80%, #da0000);
+  background-image: -moz-linear-gradient(#83000c 10%, #c60017 80%, #da0000);
+  background-image: -o-linear-gradient(#83000c 10%, #c60017 80%, #da0000);
+  background-image: -ms-linear-gradient(#83000c 10%, #c60017 80%, #da0000);
+  background-image: linear-gradient(#83000c 10%, #c60017 80%, #da0000);
+  border-right: #da0000 1px solid;
+  border-left: #83000c 1px solid;
+  margin: 0 -1px;
 }
 
-/* line 62, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 .feature-nav {
   position: relative;
-  top: 11.667px;
-  padding: 2px 3px 0 3px;
-  display: inline-block;
-}
-/* line 67, ../sass/style.scss */
-.opened > .feature-nav {
-  color: #fffdf7;
-  background-color: rgba(244, 141, 163, 0.6);
-  -webkit-box-shadow: 0 0 5px 1px rgba(244, 141, 163, 0.5), inset 0 0 5px 1px rgba(198, 0, 23, 0.5);
-  -moz-box-shadow: 0 0 5px 1px rgba(244, 141, 163, 0.5), inset 0 0 5px 1px rgba(198, 0, 23, 0.5);
-  box-shadow: 0 0 5px 1px rgba(244, 141, 163, 0.5), inset 0 0 5px 1px rgba(198, 0, 23, 0.5);
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+  top: 13.667px;
 }
 
 /*
 * Inside of the feature itself. General styles.
 */
-/* line 79, ../sass/style.scss */
+/* line 74, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 974px;
@@ -97,7 +92,7 @@
   top: 0px;
 }
 
-/* line 85, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 .feature-content {
   padding: 0px;
   height: 324.667px;
@@ -107,7 +102,7 @@
 /*
 * For the Stories feature.
 */
-/* line 94, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 .thumbnail-links {
   overflow: hidden;
   *zoom: 1;
@@ -116,7 +111,7 @@
   padding: 8px;
   float: right;
 }
-/* line 100, ../sass/style.scss */
+/* line 95, ../sass/style.scss */
 .thumbnail-links ul {
   list-style: none;
   margin: 0px;
@@ -124,7 +119,7 @@
   height: 324.667px;
   padding-left: 0px;
 }
-/* line 107, ../sass/style.scss */
+/* line 102, ../sass/style.scss */
 .thumbnail-links li {
   height: 96.222px;
   width: 96.222px;
@@ -138,35 +133,35 @@
   -moz-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 117, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 .thumbnail-links figure {
   height: 96.222px;
   width: 96.222px;
   margin: 0px;
 }
-/* line 121, ../sass/style.scss */
+/* line 116, ../sass/style.scss */
 .thumbnail-links figure img {
   width: 100%;
 }
-/* line 125, ../sass/style.scss */
-.thumbnail-links li.opened, .thumbnail-links li:hover {
+/* line 120, ../sass/style.scss */
+.thumbnail-links li.opened, .thumbnail-links li:hover, .thumbnail-links #features li.opened, #features .thumbnail-links li.opened {
   -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
 }
 
-/* line 129, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .story {
   width: 649.333px;
   position: absolute;
   display: none;
 }
-/* line 133, ../sass/style.scss */
+/* line 128, ../sass/style.scss */
 .story.opened {
   display: block;
 }
 
-/* line 137, ../sass/style.scss */
+/* line 132, ../sass/style.scss */
 .story-image {
   width: 324.667px;
   height: 332.667px;
@@ -176,12 +171,12 @@
   float: left;
   background-color: #000;
 }
-/* line 144, ../sass/style.scss */
+/* line 139, ../sass/style.scss */
 .story-image img {
   width: 100%;
 }
 
-/* line 148, ../sass/style.scss */
+/* line 143, ../sass/style.scss */
 .story-blurb {
   width: 276.667px;
   height: 324.667px;
@@ -193,21 +188,21 @@
   float: right;
 }
 
-/* line 157, ../sass/style.scss */
+/* line 152, ../sass/style.scss */
 .story-blurb-header {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 26px;
   margin-bottom: 24px;
 }
 
-/* line 162, ../sass/style.scss */
+/* line 157, ../sass/style.scss */
 .blurb {
   font-family: "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
 
-/* line 167, ../sass/style.scss */
+/* line 162, ../sass/style.scss */
 .story-read-more {
   float: right;
 }
@@ -215,7 +210,7 @@
 /*
 * hero button, e.g. story-read-more
 */
-/* line 175, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 .hero-button {
   background-color: #c60017;
   border: none;
@@ -236,12 +231,12 @@
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
 }
 
-/* line 189, ../sass/style.scss */
+/* line 184, ../sass/style.scss */
 .hero-button:hover {
   background-color: #da0000;
 }
 
-/* line 193, ../sass/style.scss */
+/* line 188, ../sass/style.scss */
 .hero-button:active {
   background-color: #ac1831;
 }
@@ -249,7 +244,7 @@
 /*
 * For the Photos feature.
 */
-/* line 202, ../sass/style.scss */
+/* line 197, ../sass/style.scss */
 #photos .feature-content {
   margin: 0px;
   padding: 0px;
@@ -259,11 +254,11 @@
   float: left;
   width: 974px;
 }
-/* line 211, ../sass/style.scss */
+/* line 206, ../sass/style.scss */
 #photos .thumbs {
   display: none;
 }
-/* line 213, ../sass/style.scss */
+/* line 208, ../sass/style.scss */
 #photos .thumbs ul {
   list-style: none;
   width: 652.58px;
@@ -271,7 +266,7 @@
   padding-left: 0px;
   margin: 4px;
 }
-/* line 219, ../sass/style.scss */
+/* line 214, ../sass/style.scss */
 #photos .thumbs ul li {
   height: 96.222px;
   width: 96.222px;
@@ -285,48 +280,48 @@
   -moz-box-shadow: 0px 0px 6px #dddddd;
   box-shadow: 0px 0px 6px #dddddd;
 }
-/* line 228, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 #photos .thumbs ul li figure {
   height: 96.222px;
   width: 96.222px;
   margin: 0px;
 }
-/* line 233, ../sass/style.scss */
+/* line 228, ../sass/style.scss */
 #photos .thumbs ul li figure img {
   width: 100%;
 }
-/* line 239, ../sass/style.scss */
+/* line 234, ../sass/style.scss */
 #photos .thumbs ul li.opened {
   -webkit-box-shadow: 0px 0px 6px #333333;
   -moz-box-shadow: 0px 0px 6px #333333;
   box-shadow: 0px 0px 6px #333333;
 }
-/* line 245, ../sass/style.scss */
+/* line 240, ../sass/style.scss */
 #photos article.photoset {
   display: none;
   height: 370px;
   width: 974px;
 }
-/* line 251, ../sass/style.scss */
+/* line 246, ../sass/style.scss */
 #photos article.photoset.opened {
   display: block;
 }
-/* line 255, ../sass/style.scss */
+/* line 250, ../sass/style.scss */
 #photos .photo {
   float: left;
 }
-/* line 257, ../sass/style.scss */
+/* line 252, ../sass/style.scss */
 #photos .photo figure {
   width: 652.58px;
   height: 370px;
   margin: 0px;
 }
-/* line 261, ../sass/style.scss */
+/* line 256, ../sass/style.scss */
 #photos .photo figure img {
   width: 100%;
   float: left;
 }
-/* line 266, ../sass/style.scss */
+/* line 261, ../sass/style.scss */
 #photos .photo figcaption {
   width: 305.42px;
   margin: 0px;
@@ -343,7 +338,7 @@
   -moz-box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
 }
-/* line 279, ../sass/style.scss */
+/* line 274, ../sass/style.scss */
 #photos .photo figcaption .notch {
   position: absolute;
   color: #faf7ed;
@@ -353,31 +348,31 @@
   margin: 0px;
   padding: 0px;
 }
-/* line 289, ../sass/style.scss */
+/* line 284, ../sass/style.scss */
 #photos .photo figcaption p {
   margin: 0px;
 }
-/* line 293, ../sass/style.scss */
+/* line 288, ../sass/style.scss */
 #photos .photo figcaption .credit {
   font-size: 11px;
 }
-/* line 302, ../sass/style.scss */
+/* line 297, ../sass/style.scss */
 #photos .photo.opened {
   display: block;
 }
-/* line 306, ../sass/style.scss */
+/* line 301, ../sass/style.scss */
 #photos .content {
   z-index: 0;
   float: left;
 }
-/* line 311, ../sass/style.scss */
+/* line 306, ../sass/style.scss */
 #photos .controls {
   width: 652.58px;
   position: absolute;
   top: 0px;
   z-index: 42;
 }
-/* line 317, ../sass/style.scss */
+/* line 312, ../sass/style.scss */
 #photos .controls .prev, #photos .controls .next {
   height: 60px;
   width: 60px;
@@ -390,32 +385,32 @@
   margin: 4px;
   border: solid 4px rgba(0, 0, 0, 0.6);
 }
-/* line 329, ../sass/style.scss */
+/* line 324, ../sass/style.scss */
 #photos .controls .prev p, #photos .controls .next p {
   position: relative;
   margin: 0px;
   margin-top: -8px;
   opacity: .6;
 }
-/* line 337, ../sass/style.scss */
+/* line 332, ../sass/style.scss */
 #photos .controls .prev {
   left: 0px;
   text-align: left;
 }
-/* line 341, ../sass/style.scss */
+/* line 336, ../sass/style.scss */
 #photos .controls .prev p {
   margin-left: 12px;
 }
-/* line 346, ../sass/style.scss */
+/* line 341, ../sass/style.scss */
 #photos .controls .next {
   right: 0px;
   text-align: right;
 }
-/* line 350, ../sass/style.scss */
+/* line 345, ../sass/style.scss */
 #photos .controls .next p {
   margin-right: 12px;
 }
-/* line 356, ../sass/style.scss */
+/* line 351, ../sass/style.scss */
 #photos .navlinks {
   z-index: 1;
   position: absolute;
@@ -427,7 +422,7 @@
   float: right;
   left: 652.58px;
 }
-/* line 367, ../sass/style.scss */
+/* line 362, ../sass/style.scss */
 #photos .navlinks header {
   margin: 8px;
   line-height: 16px;
@@ -435,17 +430,17 @@
   text-transform: uppercase;
   border-bottom: solid 1px #000;
 }
-/* line 375, ../sass/style.scss */
+/* line 370, ../sass/style.scss */
 #photos .navlinks ul {
   list-style: none;
   margin: 8px;
   padding: 0px;
 }
-/* line 380, ../sass/style.scss */
+/* line 375, ../sass/style.scss */
 #photos .navlinks ul li.opened {
   color: #666;
 }
-/* line 385, ../sass/style.scss */
+/* line 380, ../sass/style.scss */
 #photos .navlinks figure {
   height: 65.167px;
   width: 65.167px;
@@ -458,12 +453,12 @@
   overflow: hidden;
   *zoom: 1;
 }
-/* line 393, ../sass/style.scss */
+/* line 388, ../sass/style.scss */
 #photos .navlinks figure img {
   height: 100%;
   width: 100%;
 }
-/* line 398, ../sass/style.scss */
+/* line 393, ../sass/style.scss */
 #photos .navlinks figure.opened {
   -webkit-box-shadow: 0px 0px 5px black;
   -moz-box-shadow: 0px 0px 5px black;
