added borders to selected stories thumbnails

--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -117,8 +117,25 @@
 			width: 100%;
 		}
 	}
-	li.opened, li:hover{
+	li:hover{
 		@include box-shadow(0px 0px 6px rgba(0,0,0,.5));
+	}
+	li.opened{
+		@extend li:hover;
+		figure{
+			position:relative;
+		}
+		figure::after{
+			content:" ";
+			display:block;
+			border: $light-red 3px solid;
+			position: absolute;
+			top:0;
+			left:0;
+			bottom:0;
+			right:0;
+			z-index: 2;
+		}
 	}
 }
 .story{
@@ -186,7 +203,7 @@
 }
 
 .hero-button:active{
-	background-color: $mid-red;
+	background-color: $dark-red;
 }
 
 
