Ready to be made SASS-y.

--- a/hero/sass/_variables.sass
+++ b/hero/sass/_variables.sass
@@ -24,6 +24,8 @@ $photos-feature-content: $hero-width*.67
 
 $nav-dim: 60px
 $nav-arrow-margin: 12px
+$controls-width: $nav-dim*3 + 8
+$controls-height: $nav-dim + 8
 
 //colors
 $pale-red: #E01726
